# sae-auto-interp

./: .gitignore  .nfs0000000003304d7a0000009f  .pre-commit-config.yaml  README.md  aio.py  analysis.ipynb  app.py  build_gpt.py  build_pages.py  cache.py  cache_features.py  cache_gemma_acts.py  cache_topk_acts.py  centered_sparse_08.pkl  correlation.py  counterfactual.ipynb  counterfactual.py  counterfactual2.ipynb  counterfactual2.py  counterfactual3.ipynb  counterfactual3.py  counterfactual_sweep.py  demo.ipynb  demo.py  example_two.py  explain.py  explainers.py  filter.py  fuzz_score.py  gpt2.csv  gpt2_random.csv  gpt2_top.csv  gpt_score.py  graphs.py  ideal.py  intervened_generation.py  kernels.py  log.py  outlines_stats.py  output_prototyping.ipynb  (+23 more)
archive/: plots.py
debbuging/: simulation_scoring.py
delphi/: __main__.py  config.py  human_features.ipynb  logger.py  pipeline.py  utils.py
demo/: basic.py  cache.py  defaults.py  eval.py  gemma_cache.py  generate.py  generate_explanations.py  generation_score.py  pythia.py  pythia_eval.py  simulate.py
examples/: cache_itda.py  cache_saes.py  caching_activations.ipynb  check_cossim.py  convert_sae_vis.py  example_dspy.py  example_dspy_script.py  example_script.py  example_server.py  generate_explanations.ipynb  itda_vis.py  latent_contexts.ipynb  loading_saes.ipynb  pkm_vis.py  score_explanations.ipynb  server.py
experiments/: README.md  entropy_eval.py  logits.py  neighbor.py  plot_pos.py  process_logits.py  pythia.py  pythia_cache.py
feature_sorting/: layer0.txt
gpt_html/: resid_0-10.html  resid_0-14.html  resid_0-15.html  resid_0-18.html  resid_0-3.html  resid_0-33.html  resid_0-35.html  resid_0-36.html  resid_0-4.html  resid_0-48.html  resid_0-6.html  resid_0-7.html  resid_0-9.html  resid_10-0.html  resid_10-13.html  resid_10-14.html  resid_10-17.html  resid_10-18.html  resid_10-19.html  resid_10-2.html  resid_10-21.html  resid_10-24.html  resid_10-30.html  resid_10-31.html  resid_10-33.html  resid_10-36.html  resid_10-37.html  resid_10-4.html  resid_10-41.html  resid_10-44.html  resid_10-45.html  resid_10-49.html  resid_10-7.html  resid_2-1.html  resid_2-15.html  resid_2-18.html  resid_2-19.html  resid_2-2.html  resid_2-23.html  resid_2-24.html  (+82 more)
gpt_random_html/: resid_0-0.html  resid_0-10.html  resid_0-11.html  resid_0-12.html  resid_0-13.html  resid_0-14.html  resid_0-15.html  resid_0-16.html  resid_0-18.html  resid_0-21.html  resid_0-24.html  resid_0-25.html  resid_0-26.html  resid_0-27.html  resid_0-29.html  resid_0-3.html  resid_0-31.html  resid_0-33.html  resid_0-34.html  resid_0-35.html  resid_0-36.html  resid_0-39.html  resid_0-4.html  resid_0-41.html  resid_0-42.html  resid_0-45.html  resid_0-46.html  resid_0-48.html  resid_0-5.html  resid_0-6.html  resid_0-7.html  resid_0-9.html  resid_10-0.html  resid_10-1.html  resid_10-10.html  resid_10-11.html  resid_10-12.html  resid_10-13.html  resid_10-14.html  resid_10-17.html  (+197 more)
gpt_top_html/: resid_0-0.html  resid_0-11.html  resid_0-12.html  resid_0-13.html  resid_0-16.html  resid_0-21.html  resid_0-24.html  resid_0-25.html  resid_0-26.html  resid_0-27.html  resid_0-29.html  resid_0-31.html  resid_0-34.html  resid_0-39.html  resid_0-41.html  resid_0-42.html  resid_0-45.html  resid_0-46.html  resid_0-5.html  resid_10-1.html  resid_10-10.html  resid_10-11.html  resid_10-12.html  resid_10-20.html  resid_10-23.html  resid_10-26.html  resid_10-28.html  resid_10-34.html  resid_10-35.html  resid_10-38.html  resid_10-39.html  resid_10-42.html  resid_10-46.html  resid_10-47.html  resid_10-48.html  resid_10-5.html  resid_10-6.html  resid_10-8.html  resid_10-9.html  resid_2-0.html  (+75 more)
graphing/: extras.py  plot.py  sorting_correlation.py  sorting_kde.py  view.py
graphs/: plot.py  plot_few_shot.py  utils.py
neighbors/: explain.py  save_neighbors.py
new_processed/: layer0_feature0.json  layer0_feature1.json  layer0_feature10.json  layer0_feature11.json  layer0_feature13.json  layer0_feature14.json  layer0_feature15.json  layer0_feature16.json  layer0_feature19.json  layer0_feature2.json  layer0_feature20.json  layer0_feature21.json  layer0_feature23.json  layer0_feature24.json  layer0_feature25.json  layer0_feature26.json  layer0_feature27.json  layer0_feature29.json  layer0_feature31.json  layer0_feature32.json  layer0_feature33.json  layer0_feature34.json  layer0_feature35.json  layer0_feature36.json  layer0_feature4.json  layer0_feature40.json  layer0_feature41.json  layer0_feature42.json  layer0_feature43.json  layer0_feature44.json  layer0_feature45.json  layer0_feature47.json  layer0_feature49.json  layer0_feature6.json  layer0_feature7.json  layer0_feature8.json  layer0_feature9.json  layer10_feature0.json  layer10_feature1.json  layer10_feature11.json  (+228 more)
new_processed_features/: layer0_feature40.json  layer0_feature59.json  layer0_feature8.json  layer0_feature9199.json
nl_simulation/: cache.py  ce_reconstructions.py  generate_explanations.py  scores.ipynb  simulation_activations_scores.py  simulation_active.py  simulation_predictions.py
old_scripts/: cache_llama_256.py  cache_llama_512.py  explain.py  explain_different_samples.py  explain_llama.py  explain_more.py  explain_small.py  process_llama.py  score.py  score_full.py  unigram.py  (+4 more)
(+2377 files in other folders)
