[project]
name = "sae_auto_interp"
version = "0.1.0"
description = "Automated Interpretability"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets",
    "nnsight",
    "orjson",
    "sae",
    "safetensors",
    "simple_parsing",
    "torchtyping>=0.1.5",
    "fire",
    "blobfile",
    "transformer_lens",
    # "bitsandbytes",
    "flask",
    "vllm==0.6.3.post1",
    "aiofiles",
    "sentence-transformers",
    "dspy>=2.6.0rc5",
    "ipython>=8.31.0",
    "zstandard>=0.23.0",
    "numba>=0.60.0",
    "asyncer>=0.0.8",
    "outlines==0.0.44",
    "sglang[all]>=0.4.1.post5",
    "flashinfer==0.1.6",
]
dev-dependencies = [
    "pyright",
    "ruff",
]

[sources.sae]
git = "https://github.com/EleutherAI/sae"

[tool.ruff]
# TODO: Clean up or remove experiments folder.
exclude = ["experiments", "**/prompts/*", "**/prompts.py","**/simulator.py"]
# Avoid automatically removing unused imports in __init__.py files.
# Such imports will be flagged with a dedicated message suggesting
# that the import is either added to the module's __all__ symbol
ignore-init-module-imports = true
# Ignore F821 (undefined name) errors, as they are common in type annotations.
ignore = ["F722", "F821"]
# Same as Black.
line-length = 88
# Enable pycodestyle (`E`), Pyflakes (`F`), and isort (`I`) codes
# See https://beta.ruff.rs/docs/rules/ for more possible rules
select = ["E", "F", "I"]

[tool.uv.sources]
sae = { git = "https://github.com/EleutherAI/sae" }

[[tool.uv.index]]
url = "https://flashinfer.ai/whl/cu121/torch2.4/"

[[tool.uv.index]]
name = "flashinfer"
url = "https://flashinfer.ai/whl/cu124/torch2.4/flashinfer/"

# [[tool.uv.index]]
# name = "nvidia"
# url = "https://pypi.nvidia.com/"

[dependency-groups]
dev = [
    "ruff>=0.8.5",
    "pyright",
    "nest-asyncio>=1.6.0",
]
